# cAR-host

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build.Dockerfile  build.rs  build.sh  dev.Dockerfile  gst+ros.yaml  gst+txt.yaml  rtp+txt.yaml  txt.yaml
.devcontainer/: devcontainer.json
src/: client.rs  host.rs  main.rs  msg_ext.rs  rtp_media_generator.rs  server.rs  video_stream.rs
src/media/: mod.rs  rtp.rs
src/media/controls/: mod.rs  ros.rs  txt.rs
src/media/video/: gst.rs  mod.rs  rtp.rs
