[package]
name = "c-ar-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
base64 = "0.13.1"
clap = { version = "4.0.18", features = ["derive"] }
futures-util = "0.3.25"
log = "0.4.17"
prost = "0.11.0"
rosrust = "0.9.10"
rosrust_msg = "0.1.6"
serde = "1.0.147"
serde_json = "1.0.87"
simple_logger = "3.0.0"
tokio = { version = "1.21.2", features = ["io-util", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.2"
webrtc = "0.5.1"

[build-dependencies]
prost-build = "0.11.1"
tonic-build = "0.8"
